<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".DetailedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView

            android:id="@+id/current_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/current_city"
            android:textColor="@color/text_color"
            android:textSize="18pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tmp1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:text="@string/weather1"
                            android:textColor="@color/text_color"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageViewDetailed1"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/d01" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/date1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/time1"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tmp2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:text="@string/weather2"
                            android:textColor="@color/text_color"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageViewDetailed2"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/d01" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/date2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/time2"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tmp3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:text="@string/weather3"
                            android:textColor="@color/text_color"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageViewDetailed3"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/d01" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/date3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/time3"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tmp4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:text="@string/weather4"
                            android:textColor="@color/text_color"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageViewDetailed4"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/d01" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/date4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/time4"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tmp5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:text="@string/weather5"
                            android:textColor="@color/text_color"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageViewDetailed5"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/d01" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/date5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/time5"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tmp6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:text="@string/weather6"
                            android:textColor="@color/text_color"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageViewDetailed6"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/d01" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/date6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/time6"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tmp7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:text="@string/weather7"
                            android:textColor="@color/text_color"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageViewDetailed7"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/d01" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/date7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/time7"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tmp8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:text="@string/weather8"
                            android:textColor="@color/text_color"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageViewDetailed8"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/d01" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/date8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/time8"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tmp9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:text="@string/weather9"
                            android:textColor="@color/text_color"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageViewDetailed9"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/d01" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/date9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/time9"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/back_icon" />

    </LinearLayout>

</LinearLayout>